# MemoryLeaksDetector

./: CMakeLists.txt  LICENSE  README.md
source/: MemoryChecker.cpp  MemoryChecker.h  main.cpp
